# SimpleSceneRenderer

./: CMakeLists.txt  README.md  glad.c  main.cpp
GUI/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  rendererwidget.cpp  rendererwidget.hpp
Renderer/: OGLProgram.cpp  OGLProgram.hpp  camera.hpp  component_array.hpp  config.hpp  debug_shader.cpp  debug_shader.hpp  entity_components_manager.hpp  phong_shader.cpp  phong_shader.hpp  renderable.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_object.hpp  scene_object_components.hpp  shader.cpp  shader.hpp  typedef.hpp
Renderer/Components/Camera/: camera.cpp  camera.hpp
Renderer/Components/Lights/: directional_light.hpp  point_light.hpp
Renderer/Components/Meshes/: cube.cpp  cube.hpp  mesh.hpp  mesh_source.hpp  rect.cpp  rect.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
Renderer/Components/Transform/: transform.hpp
Renderer/Lights/: directional_light.cpp  directional_light.hpp  point_light.cpp  point_light.hpp
Renderer/OpenGLUtils/: mesh_buffer.cpp  mesh_buffer.hpp  opengl_program.cpp  opengl_program.hpp
Renderer/Shaders/: fs_non_shading_shader.glsl  fs_simple_shader.glsl  shaderSources.hpp  shader_sources.hpp  shader_sources.hpp.in  shaders.hpp  vs_non_shading_shader.glsl  vs_simple_shader.glsl
Renderer/Shaders/glsl/: fs_simple_shader.glsl  vs_non_shading_shader.glsl
Renderer/Shapes/: cube.cpp  cube.hpp  rect.cpp  rect.hpp  shape.hpp  sphere.hpp  triangle.cpp  triangle.hpp
Scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp
Scene/Shapes/: cube.cpp  cube.hpp  rect.cpp  rect.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
cmake/: StringifyShaderSources.cmake
example/: CMakeLists.txt  main.cpp
glad/: glad.h
include/SceneRenderer/: renderer.hpp
include/SceneRenderer/Shaders/: shaderSources.hpp
include/SceneRenderer/Shapes/: rect.hpp  sphere.hpp  triangle.hpp
include/SceneRenderer/Utility/: OGLProgram.hpp
src/: CMakeLists.txt  renderer.cpp
src/Shapes/: rect.cpp  sphere.cpp  triangle.cpp
src/Utility/: OGLProgram.cpp
